# rust-rest-api

./: .env  Cargo.toml  dockerfile
docs/: scheme.md
migrations/2023-02-19-023508_sql_init/: down.sql  up.sql
migrations/2023-03-02-142621_create_reviews/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  routes.rs  schema.rs
src/application/service/: estimationService.rs  mod.rs
src/application/service/impl/: estimationServiceImpl.rs  mod.rs
src/controllers/: estimationController.rs  mod.rs
src/domain/domainService/: EstimationRequestService.rs
src/domain/dto/: EstimationRequestDto.rs
src/domain/entity/: Article.rs  EstimationRequest.rs
src/domain/model/article/: ArticleDto.rs  ArticleId.rs  ArticleService.rs  Articles.rs
src/domain/model/estimationRequest/: EstimationRequest.rs  EstimationRequestId.rs  EstimationRequestService.rs  EstimationRequests.rs
src/domain/repository/: ArticleRepository.rs  EstimationRequestRepository.rs
src/domain/repository/Impl/: ArticleRepositoryImpl.rs  EstimationRequestRepositoryImpl.rs
src/domain/service/: estimationService.rs  mod.rs
src/domain/service/impl/: estimationServiceImpl.rs
src/domain/valueObject/estimationReuqest/: EstimationRequestId.rs
