[package]
name = "rust-rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.0.0", features = ["mysql"] }
validator = { version = "0.15", features = ["derive"]}
dotenv = "0.15"

# serde_json is just for the example, not required in general
serde_json = "1.0"

anyhow = { version = "1.0", default-features = false }